fix: :bug: empty white space on large resolutions in dark theme

--- a/styles/dark-styles.scss
+++ b/styles/dark-styles.scss
@@ -198,6 +198,8 @@ body {
 }
 
 .tk-docs {
+  background-color: $surface-100;
+
   .tk-docs-nav {
     background-color: $surface-200;
   }
